--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "monday-ui-react-core",
-  "version": "2.31.3",
-  "description": "Official monday.com UI resources for application development in React.js",
+  "name": "@maxui/core",
+  "version": "1.0.0",
+  "description": "Official maxui.org UI resources for application development in React.js",
   "main": "./dist/main.js",
   "types": "./dist/types.d.ts",
   "exports": {
