--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@maxui/core",
+  "name": "@maxui-org/core",
   "version": "1.0.0",
   "description": "Official maxui.org UI resources for application development in React.js",
   "main": "./dist/main.js",
