--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Set up git credentials
         run: |
           git config --global user.name 'ci'
-          git config --global user.email 'deploy@monday.com'
+          git config --global user.email 'deploy@maxui.org'
       - name: "Wait for tests to succeed"
         uses: fountainhead/action-wait-for-check@v1.1.0
         if: success()
@@ -74,7 +74,7 @@ jobs:
 
             ```
             // To install this prerelease version using npm, please run the following command in your terminal:
-            npm i monday-ui-react-core@${{ steps.create-update-version.outputs.package_version }}
+            npm i core@${{ steps.create-update-version.outputs.package_version }}
             // If you prefer using Yarn, you can use the following command instead:
-            yarn add monday-ui-react-core@${{ steps.create-update-version.outputs.package_version }}
+            yarn add core@${{ steps.create-update-version.outputs.package_version }}
             ```
