--- a/.github/workflows/release-v1.yml
+++ b/.github/workflows/release-v1.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Set up git credentials
         run: |
           git config --global user.name 'ci'
-          git config --global user.email 'deploy@monday.com'
+          git config --global user.email 'deploy@maxui.org'
       - name: Prepare changes
         run: npm run release
         env:
@@ -33,7 +33,7 @@ jobs:
           git push --follow-tags
       - name: Publish the new version to npm
         run: | # Compare the latest version and the current version and publish only if the version changed
-          if [ $(npm view monday-ui-react-core version) != ${{ env.package_version }} ]; then npm run build && npm publish --tag version1; else echo ''; fi;
+          if [ $(npm view core version) != ${{ env.package_version }} ]; then npm run build && npm publish --tag version1; else echo ''; fi;
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
       - uses: "marvinpinto/action-automatic-releases@latest"
